--- a/vue/zall-vue/package.json
+++ b/vue/zall-vue/package.json
@@ -19,13 +19,16 @@
     "core-js": "^3.8.3",
     "js-yaml": "^4.1.0",
     "md-editor-v3": "^4.13.0",
+    "moment": "^2.30.1",
     "pinia": "^2.1.7",
+    "qs": "^6.12.1",
     "v-code-diff": "^1.11.0",
     "vue": "^3.2.13",
     "vue-code-diff": "^1.2.0",
     "vue-codemirror": "^6.1.1",
     "vue-i18n": "^9.11.1",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
