--- a/resources/application.yaml
+++ b/resources/application.yaml
@@ -78,7 +78,7 @@ prom:
 
 logger:
   loki:
-    enabled: true
+    enabled: false
     orgId: local
     pushUrl: http://127.0.0.1:3100/loki/api/v1/push
 
