--- a/vue/zall-vue/package.json
+++ b/vue/zall-vue/package.json
@@ -27,6 +27,7 @@
     "vue": "^3.2.13",
     "vue-code-diff": "^1.2.0",
     "vue-codemirror": "^6.1.1",
+    "vue-cropper": "^1.1.4",
     "vue-i18n": "^9.11.1",
     "vue-router": "^4.3.0",
     "vue-scrollto": "^2.20.0",
