--- a/vue/zall-vue/package.json
+++ b/vue/zall-vue/package.json
@@ -13,6 +13,7 @@
     "@dagrejs/dagre": "^1.1.2",
     "@kangc/v-md-editor": "^2.3.18",
     "@vue-flow/core": "^1.33.5",
+    "@wecom/jssdk": "^2.0.2",
     "ant-design-vue": "^4.1.2",
     "axios": "^1.6.8",
     "codemirror": "^6.0.1",
